# FX-Intraday-MultiFactor

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  README.md  architecture_mindmap.md  docker-compose.yml  plan.md  pyproject.toml  spec.md
docker/: python.Dockerfile
docs/: errors_and_lessons.md  git_workflow.md  progress.md
docs/factor_research/: factor_review_example_momentum.md  factor_review_template.md  fx_multi_factor_research_workflow.md
notebooks/: 01_usdjpy_research.py  README.md
services/: __init__.py
services/api/: __init__.py  app.py
sql/postgres/: 001_init.sql
src/fx_multi_factor/: __init__.py  cli.py
src/fx_multi_factor/backtest/: __init__.py  costs.py  models.py  order_level.py  vectorized.py
src/fx_multi_factor/common/: __init__.py  config.py  deps.py  feishu.py  logging.py  numeric.py  paths.py
src/fx_multi_factor/data/: __init__.py  contracts.py  lake.py  pipeline.py  providers.py  quality.py  sessions.py
src/fx_multi_factor/factors/: __init__.py  library.py  specs.py  tearsheet.py  validation.py
src/fx_multi_factor/interfaces/: __init__.py  backtest.py  data.py  registry.py
src/fx_multi_factor/registry/: __init__.py  models.py  store.py
src/fx_multi_factor/research/: __init__.py  engine.py  labels.py  sample.py  splits.py
src/fx_multi_factor/runtime/: __init__.py  gates.py
tests/: test_api_registry_backtest_runtime.py  test_cli.py  test_research_math.py
tests/fixtures/market_data/: README.md  usdjpy_1m_polygon_basic_2025-03-03.csv  usdjpy_1m_polygon_basic_2025-03-03.metadata.json  (+1 more)
