[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-multi-factor"
version = "0.1.0"
description = "USDJPY intraday multi-factor research-first trading system scaffold."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Codex" }]
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0",
  "pydantic>=2.9.0",
  "uvicorn[standard]>=0.30.0",
]
backtest = [
  "backtrader>=1.9.78.123",
]
db = [
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.36",
]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
]
orchestration = [
  "prefect>=3.6.0",
]
research = [
  "duckdb>=1.5.0",
  "jupyterlab>=4.2.0",
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "pyarrow>=18.0.0",
  "scipy>=1.14.0",
  "statsmodels>=0.14.0",
]

[project.scripts]
fxmf = "fx_multi_factor.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
disallow_untyped_defs = true
exclude = ["^notebooks/"]

[tool.uv]
default-groups = ["dev"]
